refactor: remove apache commons lang3 usage